Update execution counts and fix errors in correlation network analysis notebooks

--- a/ipynb/pat02_corrnet_bands.ipynb
+++ b/ipynb/pat02_corrnet_bands.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9278ad89",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5132e827",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9cffff23",
    "metadata": {},
    "outputs": [],
@@ -108,6 +108,39 @@
     "        except:\n",
     "            print(f'No parameters found for {pat} {phase}', end='\\r', flush=True)\n",
     "            continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c505ad75",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.78691533, 0.        , ..., 0.98194872, 0.9864815 ,\n",
+       "        0.97831659],\n",
+       "       [0.78691533, 0.        , 0.        , ..., 0.71423767, 0.7869197 ,\n",
+       "        0.69392767],\n",
+       "       [0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       ...,\n",
+       "       [0.98194872, 0.71423767, 0.        , ..., 0.        , 0.98194828,\n",
+       "        0.99207132],\n",
+       "       [0.9864815 , 0.7869197 , 0.        , ..., 0.98194828, 0.        ,\n",
+       "        0.97831593],\n",
+       "       [0.97831659, 0.69392767, 0.        , ..., 0.99207132, 0.97831593,\n",
+       "        0.        ]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.load(Path('data') / 'correlations' / 'Pat_02' / f'rsPre_alpha_corr.npy')"
    ]
   },
   {
@@ -252,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "546b84fe",
    "metadata": {},
    "outputs": [
@@ -268,7 +301,6 @@
     "C_net = C.copy()\n",
     "np.fill_diagonal(C_net, 0)\n",
     "C_net = np.abs(C_net)\n",
-    "# C_net[C_net < 0] = 0\n",
     "G = nx.from_numpy_array(C_net)\n",
     "#\n",
     "Th, Einf, Pinf = compute_threshold_stats(G)\n",
@@ -355,10 +387,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "660cc3a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'BRAIN_BANDS' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m corr_nets \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m      4\u001b[0m corr_graphs \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m band_name, (low, high) \u001b[38;5;129;01min\u001b[39;00m \u001b[43mBRAIN_BANDS\u001b[49m\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m# 4a) filter all channels at once\u001b[39;00m\n\u001b[1;32m      7\u001b[0m     filt \u001b[38;5;241m=\u001b[39m bandpass_sos(data_Pat_rsPre, low, high, sample_rate, filter_order)\n\u001b[1;32m      8\u001b[0m     C_filt \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mabs(np\u001b[38;5;241m.\u001b[39mcorrcoef(filt))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'BRAIN_BANDS' is not defined"
+     ]
+    }
+   ],
    "source": [
     "sample_rate = 2048\n",
     "filter_order = 4\n",
@@ -504,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "37b27fec",
    "metadata": {},
    "outputs": [
