--- a/ipynb/pat02_corrnet_emd.ipynb
+++ b/ipynb/pat02_corrnet_emd.ipynb
@@ -35,9 +35,7 @@
     "mat_path = Path('data') / 'stereoeeg_patients'\n",
     "patients_list = [p.name for p in Path(mat_path).iterdir() \n",
     "                 if p.is_dir() and p.name.startswith('Pat_')]\n",
-    "#\n",
-    "phase_labels = ['rsPre', 'taskLearn', 'taskTest', 'rsPost']\n",
-    "param_keys_list = ['fs', 'fcutHigh', 'fcutLow', 'filter_order', 'NotchFilter', 'DataDimensions']"
+    "#"
    ]
   },
   {
@@ -191,7 +189,19 @@
    "execution_count": 105,
    "id": "89488aa5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m Pinfdiff \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mdiff(Pinf)\n\u001b[1;32m      2\u001b[0m th \u001b[38;5;241m=\u001b[39m Th[np\u001b[38;5;241m.\u001b[39mwhere(Pinfdiff \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m)[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "Pinfdiff = np.diff(Pinf)\n",
     "th = Th[np.where(Pinfdiff != 0)[0][0]]"
