Enhance correlation matrix processing and network analysis
- Updated subproject reference in lrgsglib.
- Modified plotlib.py to include additional imports for plotting functionalities.
- Enhanced shared.py by adding imports for hierarchical clustering.
- Improved corrmat.py with new functions for processing correlation networks, including:
  - Added spectral cleaning and non-finite value checks in build_corr_network.
  - Introduced process_network_for_phase for comprehensive network analysis per phase.
  - Added build_corrmat_single_band for single frequency band correlation matrix construction.
  - Implemented warnings for numerical instabilities and non-finite values during filtering.
  - Enhanced validation of connected components in correlation networks.

--- a/ipynb/MLB-F01.ipynb
+++ b/ipynb/MLB-F01.ipynb
@@ -53,7 +53,55 @@
    "id": "9ffb3328",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "patient = 'Pat_02'\n",
+    "phase = 'taskLearn'\n",
+    "#\n",
+    "corr_net_filt = dict(threshold=0)\n",
+    "#\n",
+    "data_pat_phase = data_dict[patient][phase]\n",
+    "data_pat_phase_ts = data_pat_phase['data']\n",
+    "fs = data_pat_phase['fs']\n",
+    "filter_order = data_pat_phase['filter_order']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27962d73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the function from corrmat module to build correlation matrices per band\n",
+    "corr_mat_band_tw = build_corrmat_perband(\n",
+    "    data_pat_phase_ts, \n",
+    "    fs, \n",
+    "    return_jump_info=False,\n",
+    "    apply_threshold_filtering=False,\n",
+    "    corr_network_params=corr_net_filt\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "997455ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, len(BRAIN_BANDS), figsize=(20, 6))\n",
+    "#\n",
+    "for i, (band_name, corr_mat) in enumerate(corr_mat_band_tw.items()):\n",
+    "    G = nx.from_numpy_array(corr_mat)\n",
+    "    #\n",
+    "    widths = [ G[u][v]['weight'] for u, v in G.edges()]\n",
+    "    edge_colors = ['red' if d['weight'] < 0 else 'blue' for u, v, d in G.edges(data=True)]\n",
+    "    nx.draw(G, ax=ax[i], node_size=100, width=widths, edge_color=edge_colors, with_labels=True, labels=int_label_pos_map[patient]['label'],font_size=8)\n",
+    "#\n",
+    "# kwargs_imshow = dict(cmap='viridis', interpolation='none', vmin=C_tmp.min(), vmax=C_tmp.max())\n",
+    "# im = ax[2].imshow(C_tmp, **kwargs_imshow)\n",
+    "# div, cax, clb = imshow_colorbar_caxdivider(im, ax[2])"
+   ]
   }
  ],
  "metadata": {
