Implement code changes to enhance functionality and improve performance

--- a/ipynb/FIGMNTGN03.ipynb
+++ b/ipynb/FIGMNTGN03.ipynb
@@ -37,13 +37,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0f79d282",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'load_data_dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data_dict, int_label_pos_map \u001b[38;5;241m=\u001b[39m \u001b[43mload_data_dict\u001b[49m(\n\u001b[1;32m      2\u001b[0m     mat_path, patients_list, phase_labels, param_keys_list\n\u001b[1;32m      3\u001b[0m )\n\u001b[1;32m      4\u001b[0m all_bands_networks \u001b[38;5;241m=\u001b[39m {}\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'load_data_dict' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "data_dict, int_label_pos_map = load_data_dict(\n",
-    "    mat_path, patients_list, phase_labels, param_keys_list\n",
+    "data_dict = load_dataset(\n",
+    "    mat_path, patients_list, phase_labels\n",
     ")\n",
     "all_bands_networks = {}"
    ]
