Remove obsolete notebook for permutation-robust ultrametric distance patient comparison and update import statement in scaled distance comparison notebook.

--- a/ipynb/NEW_ultrametric_scaled_distance_pat_comparison.ipynb
+++ b/ipynb/NEW_ultrametric_scaled_distance_pat_comparison.ipynb
@@ -28,7 +28,7 @@
     "from lrgsglib.utils.lrg.infocomm import extract_ultrametric_matrix\n",
     "from lrg_eegfc.utils.corrmat import process_network_for_phase\n",
     "from lrg_eegfc.utils.datamanag.loaders import load_data_dict\n",
-    "from lrg_eegfc.config.const import PHASE_LABELS, BRAIN_BANDS, PATIENTS_LIST, BRAIN_BAND_LABELS\n",
+    "from lrg_eegfc.config.const import PHASE_LABELS, BRAIN_BANDS, PATIENTS_LIST, \n",
     "\n",
     "# Figure output path\n",
     "path_figs = Path('data') / 'figures' / 'new_ultrametric_scaled_distance_pat_comparison'\n",
