fix: update output filenames and execution counts in notebooks for clarity

--- a/ipynb/DSTCMP_permutation_robust.ipynb
+++ b/ipynb/DSTCMP_permutation_robust.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: data/figures/DSTCMP_permutation_robust/delta/permutation_robust.png\n"
+      "Saved: data/figures/DSTCMP_permutation_robust/delta.png\n"
      ]
     },
     {
@@ -226,7 +226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: data/figures/DSTCMP_permutation_robust/theta/permutation_robust.png\n"
+      "Saved: data/figures/DSTCMP_permutation_robust/theta.png\n"
      ]
     },
     {
@@ -243,7 +243,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: data/figures/DSTCMP_permutation_robust/alpha/permutation_robust.png\n"
+      "Saved: data/figures/DSTCMP_permutation_robust/alpha.png\n"
      ]
     },
     {
@@ -260,7 +260,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: data/figures/DSTCMP_permutation_robust/beta/permutation_robust.png\n"
+      "Saved: data/figures/DSTCMP_permutation_robust/beta.png\n"
      ]
     },
     {
@@ -277,7 +277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: data/figures/DSTCMP_permutation_robust/low_gamma/permutation_robust.png\n"
+      "Saved: data/figures/DSTCMP_permutation_robust/low_gamma.png\n"
      ]
     },
     {
@@ -294,7 +294,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: data/figures/DSTCMP_permutation_robust/high_gamma/permutation_robust.png\n",
+      "Saved: data/figures/DSTCMP_permutation_robust/high_gamma.png\n",
       "✓ All figures generated\n"
      ]
     }
@@ -330,9 +330,7 @@
     "\n",
     "    cbar = fig.colorbar(im, ax=axes, shrink=0.85)\n",
     "    cbar.set_label('Permutation-robust distance')\n",
-    "    outdir = path_figs / band\n",
-    "    outdir.mkdir(parents=True, exist_ok=True)\n",
-    "    outfile = outdir / 'permutation_robust.png'\n",
+    "    outfile = path_figs / f'{band}.png'\n",
     "    fig.savefig(outfile, dpi=200, bbox_inches='tight')\n",
     "    plt.show()\n",
     "    print(f'Saved: {outfile}')\n",
