chore: archive old notebooks for reorganization
Archive experimental notebooks to ipynb/archive_2025-12-11/:
- DSTCMP_* (distance measure comparisons)
- FIGMNTGN* (figure generation for papers)
- NEW_* (new analysis experiments)
- TEST_* (testing and prototyping)
- UTILS-* (utility demonstrations)
- Exploratory analysis notebooks

These notebooks have been archived to maintain a cleaner project structure
while preserving historical analysis work.

--- a/ipynb/archive_2025-12-11/FIGMNTGN03.ipynb
+++ b/ipynb/archive_2025-12-11/FIGMNTGN03.ipynb
@@ -184,6 +184,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "25dd2f59",
+   "metadata": {},
+   "source": [
+    "### dendrogram analysis LRG"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 97,
    "id": "b47f5c61",
