--- a/ipynb/archive_2025-12-11/FIGMNTGN04.ipynb
+++ b/ipynb/archive_2025-12-11/FIGMNTGN04.ipynb
@@ -361,6 +361,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2b340f14",
+   "metadata": {},
+   "source": [
+    "### create sankey diagram"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "f5cd1f19",
