--- a/ipynb/archive_2025-12-11/tmp.ipynb
+++ b/ipynb/archive_2025-12-11/tmp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "331e729f",
    "metadata": {},
    "outputs": [
@@ -23,6 +23,8 @@
     "#\n",
     "from lrg_eegfc import *\n",
     "#\n",
+    "path_data_ = Path('data')\n",
+    "path_data = path_data_ / 'stereoeeg_patients'\n",
     "path_figs = Path('data') / 'figures' / 'test'\n",
     "path_figs.mkdir(parents=True, exist_ok=True)"
    ]
@@ -37,12 +39,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0f79d282",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dict = load_dataset(mat_path, patients_list, PHASE_LABELS)"
+    "data_dict = load_dataset(path_data, ['Pat_02', 'Pat_08'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bbe1e0fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'rsPre': PatientRecording(timeseries=array([[-13.31505268,  -9.56112223,  -6.73066148, ...,   7.8814298 ,\n",
+       "           7.54071147,   6.91933594],\n",
+       "        [-18.29872891, -16.82323932, -15.88530869, ...,  10.19933632,\n",
+       "           9.51864352,   8.56682976],\n",
+       "        [-23.84604025, -27.18449335, -29.82154799, ...,  -4.18745436,\n",
+       "          -3.87387472,  -3.74154854],\n",
+       "        ...,\n",
+       "        [-33.80101962, -30.41774716, -27.49405978, ..., -11.97684623,\n",
+       "         -11.83201294, -11.80967329],\n",
+       "        [-39.00814942, -36.24516817, -33.83168667, ..., -12.3381679 ,\n",
+       "         -12.03825676, -11.76011977],\n",
+       "        [-14.09218899, -10.53318807,  -7.62021607, ..., -21.5027313 ,\n",
+       "         -20.46259743, -19.20631841]]), parameters={'fs': 2048.0, 'fcutHigh': 300.0, 'fcutLow': 0.53, 'filter_order': 4.0}, channel_metadata=None),\n",
+       " 'taskLearn': PatientRecording(timeseries=array([[ 25.12002837,  29.39795112,  32.70690531, ...,  -9.55669841,\n",
+       "          -8.88644864,  -8.23448655],\n",
+       "        [ 11.38775729,  14.47611463,  16.76690966, ..., -16.09436209,\n",
+       "         -14.46796215, -12.82367634],\n",
+       "        [-13.030486  ,  -9.29514267,  -6.6619658 , ..., -26.34232776,\n",
+       "         -23.16993719, -19.76770371],\n",
+       "        ...,\n",
+       "        [ -1.85968207,  -3.38365097,  -4.66996673, ...,  21.35186095,\n",
+       "          20.25904924,  18.99957059],\n",
+       "        [  6.36945451,   2.7981539 ,   0.18113299, ...,  24.33822142,\n",
+       "          23.5777991 ,  22.71783011],\n",
+       "        [ 17.39916511,  17.32124179,  17.0734089 , ...,  16.56509192,\n",
+       "          15.03884759,  12.89723583]]), parameters={'fs': 2048.0, 'fcutHigh': 300.0, 'fcutLow': 0.53, 'filter_order': 4.0}, channel_metadata=None),\n",
+       " 'taskTest': PatientRecording(timeseries=array([[ 26.6542448 ,  30.58958109,  33.90783413, ...,  -4.23413091,\n",
+       "          -3.34186103,  -1.9933096 ],\n",
+       "        [ 42.71742234,  48.89821733,  53.71197711, ...,  15.81427015,\n",
+       "          15.04974644,  14.82274359],\n",
+       "        [ 68.18831956,  77.38053492,  84.18312672, ...,  17.20334049,\n",
+       "          16.30276812,  15.71482483],\n",
+       "        ...,\n",
+       "        [ -6.3180273 ,  -1.93629763,   0.93039616, ..., -27.35361206,\n",
+       "         -26.37196014, -25.39265846],\n",
+       "        [  4.17411281,   5.45665025,   6.29815955, ..., -15.38961063,\n",
+       "         -15.40472454, -15.69739101],\n",
+       "        [ 25.80519766,  30.75420724,  34.1577736 , ..., -26.5775075 ,\n",
+       "         -25.44391057, -24.38349454]]), parameters={'fs': 2048.0, 'fcutHigh': 300.0, 'fcutLow': 0.53, 'filter_order': 4.0}, channel_metadata=None),\n",
+       " 'rsPost': PatientRecording(timeseries=array([[-34.59741817, -44.79028981, -52.55088832, ...,  -7.62569618,\n",
+       "          -7.52714099,  -6.90581035],\n",
+       "        [-13.69650609, -16.6711678 , -19.15986984, ...,  -9.92013195,\n",
+       "          -9.22011413,  -8.21032922],\n",
+       "        [ 27.41621951,  37.27602782,  44.22016146, ...,  -6.64463633,\n",
+       "          -5.55640647,  -4.46466506],\n",
+       "        ...,\n",
+       "        [-21.95037407, -26.29481485, -28.86460332, ...,  -6.27141864,\n",
+       "          -7.03782163,  -7.82566882],\n",
+       "        [-19.51732303, -24.89437558, -28.52103252, ...,  -6.83243085,\n",
+       "          -7.76392208,  -8.78035234],\n",
+       "        [-30.68086003, -43.1387277 , -51.86192007, ...,  -4.28559633,\n",
+       "          -5.79607141,  -7.71174079]]), parameters={'fs': 2048.0, 'fcutHigh': 300.0, 'fcutLow': 0.53, 'filter_order': 4.0}, channel_metadata=None)}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_dict['Pat_02']"
    ]
   },
   {
